[workspace]
members = ["challenges/first_challenge", "data_structures/graph", 
    "data_structures/segment_tree",
    "hands-on/*",
    "problems/lessons/*",
    "problems/mandatory/binary_search/*",
    "problems/mandatory/dynamic_programming/*",
    "problems/mandatory/miscellaneous/*",
    "problems/mandatory/ranges/*",
    "problems/mandatory/sweep_line/*",
]
resolver = "2"
